deploy/eks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: idfc
  labels:
    platform: idfc-integration
